--- a/hello/style.css
+++ b/hello/style.css
@@ -27,4 +27,20 @@
  /* Do not forget the behaviour known as margin collapsing. When two elements have two different margins, they will be separated by the highest one.  */
     margin: 0em;
 
+.
+
 }
+
+.box-three {
+  
+    padding: 0.1em;
+    background-color: #2ddb70;
+    border: 0 solid #27AE60;
+    
+ /* Do not forget the behaviour known as margin collapsing. When two elements have two different margins, they will be separated by the highest one.  */
+    margin: 0em;
+
+.
+
+}
+
